Fix header overflow

--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,7 @@ header {
   .header-container svg#left,
   .header-container svg#right {
     position: absolute;
-    width: 51%;
+    width: 54%;
     height: auto;
     fill: #121212; }
   .header-container svg#left {
